<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:baselineAligned="false" android:shrinkColumns="1,2,3,4," android:stretchColumns="1,2,3,4,">
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText" android:layout_column="0" android:layout_span="4"
                android:clickable="false" android:editable="false" android:enabled="true" android:focusable="false"
                android:textSize="45dp" android:gravity="right" android:maxLength="11"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txtBack"
                android:id="@+id/btnBack" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txtClear"
                android:id="@+id/btnClear" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txtEquials"
                android:id="@+id/btnEnter" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt7"
                android:id="@+id/btn7" android:layout_column="0" android:layout_weight="1"
                android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt8"
                android:id="@+id/btn8" android:layout_column="1" android:layout_weight="1"
                android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt9"
                android:id="@+id/btn9" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txtDivide"
                android:id="@+id/btnDivide" android:layout_column="1" android:layout_weight="1"
                android:textSize="@dimen/buttonTextSize"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt4"
                android:id="@+id/btn4" android:layout_column="0" android:layout_weight="1"
                android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt5"
                android:id="@+id/btn5" android:layout_column="1" android:layout_weight="1"
                android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt6"
                android:id="@+id/btn6" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txtMult"
                android:id="@+id/btnMult" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt1"
                android:id="@+id/btn1" android:layout_column="0" android:layout_weight="1"
                android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt2"
                android:id="@+id/btn2" android:layout_column="1" android:layout_weight="1"
                android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt3"
                android:id="@+id/btn3" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txtAdd"
                android:id="@+id/btnAdd" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txt0"
                android:id="@+id/btn0"
                android:layout_column="0" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>

        <Button android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txtDot"
                android:id="@+id/btnDot"
                android:layout_column="1" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txtNegPos"
                android:id="@+id/btnNegPos" android:layout_weight="1" android:textSize="@dimen/buttonTextSize"/>
        <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/txtSub"
                android:id="@+id/btnSub" android:singleLine="false" android:layout_weight="1"
                android:textSize="@dimen/buttonTextSize"/>
    </TableRow>
</TableLayout>

